# moga_engine

./: .gitignore  CMakeLists.txt  README.md  a  changelog.txt  here.cpp  moga  negative.glsl
resources/image/: button.png~  button_hovered.png~  button_pressed.png~  frame.png-autosave.kra  frame.png~  frame_gray.png~  proj.aseprite
resources/image/button/3d/: idle.png-autosave.kra  idle.png~  pressed.kra
resources/image/button/basic/: hovered.ase  hovered.png~  idle.ase  idle.kra  idle.png~  pressed.aseprite  pressed.png~  pressedase.aseprite
resources/image/button/close/: hovered.ase  idle.ase  pressed.ase
resources/image/button/hide/: hovered.ase  hovered.png~  idle.ase  pressed.ase  pressed.png~
resources/image/button/plus/: hovered.ase  idle.ase  pressed.ase
resources/image/button/rgb/: hovered.ase  idle.ase  pressed.ase
resources/image/button/save/: hovered.ase  idle.ase  pressed.ase
resources/image/util_bar/: basic.ase  basic.png~  proj.ase
resources/image/util_bar/basic/: corner.ase  middle.ase  under.ase
resources/image/window/: body.ase
resources/shader/: negative.glsl  rgb_mapping.glsl
resources/ufolker/ufo/scan_green/: anm.aseprite
src/: MogaEngine.h  app_initialization.h  main.cpp  responses.h  scene_generation.h  todo
src/chemistry/: chem_engine.cpp  chem_engine.h  chem_reactions.cpp  chem_reactions.h
src/collections/: Collections.h  objects.cpp  objects.h  renderables.cpp  renderables.h  smart_colors.cpp  solid_bodies.h
src/collections/actions/: actions.h  press_pos_print.h  toggle.cpp  toggle.h  utils.h
src/collections/effects/: effects.h  layer_permanent.cpp  layer_permanent.h  rgb_splined.cpp  rgb_splined.h  utils.h
src/collections/objects/: objects.h
src/collections/plugins/: abstract_widget.h  bloor.cpp  brush.cpp  edger.cpp  image_brush.cpp  invasion.cpp  kctf_super_widget.cpp  kctf_widget_library_extension.cpp  negative.cpp  plugin_interface.h  rainbow_stamp.cpp  shader.glsl  sharp.cpp  sharpy.cpp  shdr.cpp  stamp.cpp  stringify.py  super_widget.h  template.cpp  test.cpp  utils.h  window_walker.cpp
src/collections/redactor_views/: canvas.cpp  canvas.h  color_picker.cpp  color_picker.h  redactor_views.h  utils.h
src/collections/renderables/: renderables.cpp  renderables.h
src/collections/smart_colors/: smart_colors.h
src/collections/styles/: button.cpp  button.h  styles.h  text.cpp  text.h  util_bar.cpp  util_bar.h  utils.h  window.cpp  window.h
src/collections/views/: abstract_layout.h  button.cpp  button.h  canvas.cpp  canvas.h  dialog_window.cpp  dialog_window.h  drag_tab.h  hideable.cpp  hideable.h  highlighter.cpp  highlighter.h  horizontal_layout.cpp  horizontal_layout.h  labeled_view.cpp  labeled_view.h  labled_view.cpp  labled_view.h  magnetic.cpp  magnetic.h  menu.cpp  menu.h  mouse_catcher.cpp  mouse_catcher.h  repeater.cpp  repeater.h  slider.cpp  slider.h  spline.cpp  spline.h  stretcher.h  submenu.cpp  submenu.h  text.cpp  text.h  text_field.cpp  text_field.h  toggler.cpp  toggler.h  utility_tab.cpp  (+6 more)
src/device/: keyboard.h
src/engine/: Resources.cpp  Resources.h  game_engine.hpp  kctf_engine.hpp  kctf_engine_prev.hpp  kctf_engine_prot.hpp  moga_engine.cpp  moga_engine.h  moga_engine_settings.h  object.cpp  object.h  object.hpp  objects_collection.hpp  resource_manager.h  tickable.h
src/engine/device/: keyboard.cpp  keyboard.h
src/event_system/: abstract.h  dispatcher_begin.h  dispatcher_end.h  event.h  event_reaction.h  event_system.h  event_types.h  keymap.h  redactor_event_types.h  view_es.h
src/general/c/: random.h
src/general/cpp/: matrix.hpp  vec2d.hpp  vec3d.hpp
src/physics/: phys_tickable.h  physic_objects_collection.hpp  physic_point.hpp  physics_engine.cpp  physics_engine.h  physics_engine.hpp  physics_engine_settings.h  physics_settings.hpp  point_joint.hpp  tickable.hpp
src/physics/collision/: coll_circle_circle.cpp  coll_circle_circle.h  coll_circle_line.cpp  coll_circle_line.h  collision.h
src/physics/solid_body/: sb_circle.cpp  sb_circle.h  sb_line.cpp  sb_line.h  solid_body.cpp  solid_body.h
src/redactor/: Redactor.h  canvas.cpp  canvas.h  effect_manager.h  engine.cpp  engine.h  hotkey_bind.h  hotkeys.h  layer.h  overall_redactor_reactions.h  plugin_std.h
src/redactor/canvas/: canvas.cpp  canvas.h  canvas_history.cpp  canvas_history.h
src/redactor/extensions/: extension.h  extension_manager.cpp  extension_manager.h
src/redactor/layer/: layer.cpp  layer.h
src/redactor/plugin_std/: plugin_std.hpp  std.hpp
src/redactor/plugin_std/lib_std/: events_std.h  extensioner_std.h  keyboard_std.h  types_std.h  widget_std.h
src/redactor/plugins/: app_plugin_interface.cpp  app_plugin_interface.h  idea.txt  plugin.cpp  plugin.h  plugin_manager.cpp  plugin_manager.h  settings_window.cpp  settings_window.h
src/redactor/plugins/interface/: app_plugin_interface.cpp  app_plugin_interface.h  plugin_extension.cpp  (+11 more)
src/redactor/tools/: brush.cpp  brush.h  color_pipett.h  color_pipette.cpp  eraser.cpp  eraser.h  plugin_tool.cpp  plugin_tool.h  tool.h  tool_manager.cpp  tool_manager.h  tools.h
src/utils/: affected.h  effect.h  fast_random.hpp  interpolator.cpp  interpolator.h  lable.h  logger.cpp  logger.h  timer.cpp  timer.h  vec2d.h  vec3d.cpp  vec3d.h
src/utils/interpolator/: catmullrom.cpp  catmullrom.h  interpolator.h
src/utils/state_history/: history.cpp  history.h  state.h
src/utils/string_input/: string_field.h
src/utils/text_line/: cursor.cpp  cursor.h  line.cpp  line.h  line_history.cpp  line_history.h  line_pos.cpp  line_pos.h
src/view/: lambda.h  view.cpp  view.h
src/visual/: resource_manager.h  style.h  visual_engine.cpp  visual_engine.h  visual_engine_settings.h
src/visual/animation/: animation.h
src/visual/color/: color.h  rgba.cpp  rgba.h  smart_color.cpp  smart_color.h
src/visual/renderer/: Appearence.h  appearence.h  appearence_animation.h  gate_type_aliases.cpp  gate_type_aliases.h  renderable.h  renderable_object.h  renderer.cpp  renderer.h
src/visual/style/: mouse_reaction_style.h  style.h  text_style.h  utility_bar_style.h  window_style.h
(+33 files in other folders)
